--- a/oak.vcxproj
+++ b/oak.vcxproj
@@ -20,6 +20,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oak\block.h" />
+    <ClInclude Include="oak\block_detail.h" />
+    <ClInclude Include="oak\dummy_block.h" />
+    <ClInclude Include="oak\flowgraph.h" />
+    <ClInclude Include="oak\top_block.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="oak\block.cpp" />
+    <ClCompile Include="oak\block_detail.cpp" />
+    <ClCompile Include="oak\dummy_block.cpp" />
+    <ClCompile Include="oak\flowgraph.cpp" />
+    <ClCompile Include="oak\top_block.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -29,7 +40,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -79,6 +90,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir);$(BOOST_DIR)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
