--- a/test.vcxproj
+++ b/test.vcxproj
@@ -18,33 +18,15 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="oak\block.h" />
-    <ClInclude Include="oak\block_detail.h" />
-    <ClInclude Include="oak\buffer.h" />
-    <ClInclude Include="oak\data_type.h" />
-    <ClInclude Include="oak\dummy\dummy_block.h" />
-    <ClInclude Include="oak\block_runtime.h" />
-    <ClInclude Include="oak\top_block.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="oak\block.cpp" />
-    <ClCompile Include="oak\block_detail.cpp" />
-    <ClCompile Include="oak\buffer.cpp" />
-    <ClCompile Include="oak\data_type.cpp" />
-    <ClCompile Include="oak\dummy\dummy_block.cpp" />
-    <ClCompile Include="oak\block_runtime.cpp" />
-    <ClCompile Include="oak\top_block.cpp" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4BEC5042-05A4-4436-A174-587566BC0AE5}</ProjectGuid>
-    <RootNamespace>oak</RootNamespace>
+    <ProjectGuid>{EFA0538F-0C58-41E1-B353-19DE25E6CF15}</ProjectGuid>
+    <RootNamespace>test</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -96,6 +78,9 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir);$(BOOST_DIR)</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>$(OutDir)oak.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -133,6 +118,13 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="test\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="test\oak_buffer_test.h" />
+    <ClInclude Include="test\oak_top_block_test.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
