--- a/test.vcxproj.filters
+++ b/test.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="test\oak_top_block_test.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="test\dummy_block_test.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="test\combo_block_test.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
